<resources>
    <string name="app_name">Attend Class</string>
    <string name="NameView">Name</string>
    <string name="IdView">ID</string>
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>
    <string name="login_title">Attend Class</string>
    <string name="id_title">Enter your ID</string>
    <string name="button_login">Login</string>
    <string name="error_message">Do not found this ID</string>
    <string name="missing_message">Please Enter your ID</string>
    <string name="ask">No Qr Code Create</string>
    <string name="buttonInMainSetText">QR Code Reader</string>
    <string name="title_activity_class_schedule">ClassScheduleActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="scan_result">Scan Result</string>
    <string name="checked">checked</string>
    <string name="label_subject_name">Subject Name:</string>
    <string name="label_subject_id">Subject ID:</string>
    <string name="label_generate">GENERATE</string>
    <string name="label_qr_code_view">QR Code View</string>
    <string name="label_qr_code_generator">QR Code Generator</string>
    <string name="label_checked">CHECKED</string>
    <string name="label_class_attending">Class Attending</string>
    <string name="label_class_shedule">Class Schedule</string>
    <string name="label_qr_code_reader">QR Code Reader</string>
</resources>
