<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="240dp"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center"
    android:layout_centerInParent="true"
    android:background="@color/white">

    <TextView
        android:text="@string/scan_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/AppFont2"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/showResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/app_name"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:textSize="15sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_checked"
        android:background="@color/AppTone"
        android:textColor="@color/AppFont"
        android:layout_marginTop="20dp"
        android:text="@string/checked"
        android:textSize="18sp" />

</LinearLayout>