<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.example.attendclassapps.activities.QrGeneratorActivity">

    <LinearLayout
        android:id="@+id/vQRCodeCreator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_base_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/inSJName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/label_subject_name"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/inSJid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/label_subject_id" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/vBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/vBtnQRGen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:elevation="2dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_button_qrgen">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/activity_base_padding"
                    android:background="?attr/selectableItemBackgroundBorderless">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="@dimen/ic_qr_width"
                        android:layout_height="@dimen/ic_qr_height"
                        android:background="@drawable/qr_code_add"
                        android:layout_marginEnd="5dp"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_generate"
                        android:textSize="16sp"
                        android:textColor="@color/black"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/vBtnQRView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:elevation="2dp"
                android:background="@drawable/bg_button_qrview">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/activity_base_padding"
                    android:background="?attr/selectableItemBackgroundBorderless">

                    <android.support.v7.widget.AppCompatImageView
                        android:layout_width="@dimen/ic_qr_width"
                        android:layout_height="@dimen/ic_qr_height"
                        android:background="@drawable/qr_code"
                        android:layout_marginEnd="5dp"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_qr_code_view"
                        android:textSize="16sp"
                        android:textColor="@color/black"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
